<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/starbucks_dark_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/starbucks_green_logo"
            android:contentDescription="@string/starbuck_logo_alt"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/gift_starbucks_banner"/>


        <ImageView
            android:id="@+id/gift_star_img"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/star_image_alt"
            app:srcCompat="@drawable/star_icon"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gift_starbucks_banner" />

        <TextView
            android:id="@+id/gift_star_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Star_Count_Holder"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@id/gift_star_img"
            app:layout_constraintLeft_toRightOf="@id/gift_star_img"
            app:layout_constraintTop_toTopOf="@id/gift_star_img" />

        <TextView
            android:id="@+id/gift_header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/send_stars_label"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gift_star_img"/>

        <EditText
            android:id="@+id/gift_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:backgroundTint="@color/white"
            android:hint="@string/email_hint"
            android:textColorHint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gift_header1" />

        <TextView
            android:id="@+id/gift_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/amount_label"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintLeft_toLeftOf="@id/gift_email_edit_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gift_email_edit_text" />

        <Spinner
            android:id="@+id/gift_amount_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/gift_p1"
            app:layout_constraintLeft_toRightOf="@id/gift_p1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/gift_p1" />

        <Button
            android:id="@+id/gift_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/butter_orange"
            android:text="@string/send_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gift_p1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>