<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/starbucks_dark_green"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/wallet_h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_number_holder"
        android:textSize="15sp"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/wallet_balance_holder1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_holder"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/wallet_h1"
        app:layout_constraintLeft_toLeftOf="@id/wallet_h1"/>


    <TextView
        android:id="@+id/wallet_details1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/hyperlink_blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintBottom_toTopOf="@id/wallet_img1"
        app:layout_constraintLeft_toRightOf="@id/wallet_balance_holder1"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/wallet_img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/starbucks_reserve_card"
        android:contentDescription="starbucks-card-img"
        android:adjustViewBounds="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_drop_shadow_drawable"
        app:layout_constraintTop_toBottomOf="@id/wallet_balance_holder1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/wallet_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_cards"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/wallet_img1"
        app:layout_constraintLeft_toLeftOf="@id/wallet_img1" />

    <View
        android:id="@+id/wallet_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/background_tint_grey"
        app:layout_constraintTop_toBottomOf="@id/wallet_p1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/wallet_img2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@drawable/custom_drop_shadow_drawable"
        android:contentDescription="starbucks-thankyou-card-img"
        app:srcCompat="@drawable/starbucks_thankyou_resized"
        android:layout_marginTop="15dp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintTop_toBottomOf="@id/wallet_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/wallet_balance_holder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_holder"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/wallet_img2"
        app:layout_constraintLeft_toLeftOf="@id/wallet_img2"/>

    <TextView
        android:id="@+id/wallet_details2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/hyperlink_blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/wallet_img2"
        app:layout_constraintRight_toRightOf="@id/wallet_img2"/>

    <Button
        android:id="@+id/wallet_add_money_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_money"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        android:background="#ffca28"
        android:padding="16dp"
        app:layout_constraintRight_toRightOf="@id/wallet_pay_in_store_button"
        app:layout_constraintTop_toBottomOf="@id/wallet_line"
        app:layout_constraintLeft_toRightOf="@id/wallet_img2"
        app:layout_constraintBottom_toBottomOf="@id/wallet_img2"/>

    <Button
        android:id="@+id/wallet_pay_in_store_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_in_store"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffca28"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/wallet_add_money_button"
        app:layout_constraintLeft_toRightOf="@id/wallet_img2"
        app:layout_constraintBottom_toBottomOf="@id/wallet_img2"/>

</androidx.constraintlayout.widget.ConstraintLayout>